@@ -1,3 +1,8 @@
+2005-03-10  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/20322
+	* gcc.dg/20050307-1.c: New test.
+
 2005-03-10  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR c++/20375
